slightly less evil chromium trap

--- a/html/unsupported.html
+++ b/html/unsupported.html
@@ -15,7 +15,7 @@
 		<p>
 			This is not because your browser lacks features, but for ethical reasons - Gianmarco said it best, so <a href="https://gianmarco.gg/blinky/">here</a> you go.<br/>
 			<i>Note that this cannot be a false positive, as I check for an attribute within the javascript environment of the browser that tells me whether the browser is chromium based or not. If your browser marks itself as Chrome, that's its fault, not mine.</i><br/>
-			<i>Note on that note: IE10 marked itself as chrome to ward of websites that tried to block non-chrome browsers (for featureset reasons) - I just hope you're not using IE10 is all</i>
+			<i>Note on that note: IE10 marked itself as chrome to ward off websites that tried to block non-chrome browsers (for featureset reasons) - I just hope you're not using IE10 is all</i>
 		</p>
 		<p>In any case, I recommend a Firefox-based browser, though I don't block Safari either. Take a look at this:</p>
 		<section>
@@ -39,6 +39,9 @@
 		</section>
 		<p>
 			Yes, there's still other browsers. You could use IE11. Or WebKitGTK. Or Konqueror. But those are all pretty crap, since it's near impossible to keep up with …mainly google's pace of adding new features to the web standards. Mozilla is big enough and Apple can afford to not care, but all the others get left behind :(
+		</p>
+		<p>
+			Ok, now that you've probably skimmed the page for the link that makes you go back, <a href="/?i_will_choose_a_better_browser_next_time">here it is</a>. Chromium is obviously still unsupported though, so no complaining about stuff being broken!
 		</p>
 	</body>
 </html>
