--- a/html/unsupported.html
+++ b/html/unsupported.html
@@ -4,7 +4,8 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<title>Fuck Google :)</title>
-		<link rel="icon" type="image/svg" href="favicon.svg"/>
+		<link rel="icon" type="image/svg" href="resource/icons/favicon.svg"/>
+		<link rel="icon" href="resource/icons/favicon.ico"/>
 		<style>
 			h3>b{font-weight:normal}
 		</style>
